[package]
name = "popol"
description = "Minimal non-blocking I/O"
readme = "Readme.md"
repository = "https://github.com/cloudhead/popol"
homepage = "https://github.com/cloudhead/popol"
documentation = "https://docs.rs/popol"
keywords = ["io", "poll", "async"]
version = "0.5.0"
authors = ["Alexis Sellier <self@cloudhead.io>"]
edition = "2018"
license = "MIT"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace", "net"] }
libc = { git = "https://github.com/mesalock-linux/libc-sgx.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_build_helper = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tprotected_fs = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }
sgx_unwind = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk.git" }